# GarbageCollectorRust

./: Cargo.toml  README.md
benches/: garbage_collector.rs
data/: chains.json
data/token_lists/: Base.json  Polygon.json
src/: const_types.rs  lib.rs  main.rs  odos_aggregator.rs  web3Client.rs  web3_client.rs
src/constants/: const_types.rs
src/helpers/: garbage_collector.rs  mod.rs  odos_aggregator.rs  utils.rs  web3_client.rs
