[package]
name = "garbage-collector-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = { version = "0.1.4", features = ["full"] }
eyre = "0.6.12"
reqwest = "0.12.5"
serde = "1.0.204"
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
tokio-macros = "2.3.0"

[dev-dependencies]
criterion = "0.5.1"


[[bench]]
name = "garbage_collector"
harness = false